# tpm-luks

./: .gitignore  AUTHORS  BUILD  INSTALL  Makefile.am  README  TODO  bios_pcr_value  calc_pcr  chain_hashes  configure.in  cryptroot-ask-tpm.sh  gen_pcr_value  gen_pcr_values  locked_nvram_setup  tpm-luks-update-hook  tpm-luks.conf  tpm-luks.conf.in  tpm-luks.spec  tpm-luks.spec.in  tpm_luks  tpm_nvram_data_mover
50plymouth-tpm/: .auditing-0  cryptroot-ask-tpm.sh  cryptroot-ask.sh
dracut/: Makefile.am  dracut-key  expand-initrd-key  tpm-luks.conf  tpm-luks.conf.in
dracut/Fedora17/crypt-tpm/: cryptroot-ask-tpm.sh  cryptroot-ask.sh  module-setup.sh  tpm-try-authless-indexes.sh
dracut/RHEL6/plymouth-tpm/: cryptroot-ask-tpm.sh  install
dracut/utils/: awk  getcapability  nv_readvalue  od  resetlockvalue
plymouth-tpm/: Makefile.am  cryptroot-ask.sh  install
swtpm-utils/: Makefile.am  getcapability.c  nv_readvalue.c  resetlockvalue.c
swtpm-utils/include/: hmac.h  oiaposap.h  pcrs.h  tpm.h  tpm_error.h  tpmfunc.h  tpmutil.h
swtpm-utils/lib/: Makefile.am  auditing.c  bind.c  chgauth.c  context.c  counter.c  daa.c  debug.c  delegation.c  dir.c  eviction.c  hmac.c  identity.c  keys.c  keyswap.c  libtpm.la  maintenance.c  management.c  migrate.c  miscfunc.c  newserialize.h  nv.c  oiaposap.c  optin.c  owner.c  ownertpmdiag.c  pcrs.c  raw.c  rng.c  seal.c  serialize.c  session.c  sha.c  signature.c  startup.c  testing.c  ticks.c  tpm_constants.h  tpm_lowlevel.h  tpm_structures.h  (+7 more)
tpm-luks/: gen_pcr_values  tpm-luks  tpm-luks-chain-hashes  tpm-luks-gen-pcr-values  tpm-luks-gen-tgrub-pcr-values  tpm-luks-init  tpm-luks-parse-config.in  tpm-luks-update  tpm_luks
yum/: Makefile.am  post-transaction-actions.conf  post-transaction-actions.py  sample.action  tpm-luks.action.in
