AC_INIT(tpm-luks, 0.7, key@linux.vnet.ibm.com)

AM_INIT_AUTOMAKE([foreign 1.6])

AC_PROG_SED
AC_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR([m4])

CFLAGS="$CFLAGS -W -Wall -Wno-unused-parameter -Wsign-compare"
AC_PROG_CC

if `egrep -q "Red Hat Enterprise Linux.*release 6" /etc/*-release`; then
	AM_CONDITIONAL([RHEL6], true)
	AM_CONDITIONAL([FEDORA17], false)
	AC_SUBST(DRACUT_MODULE_NAME, [plymouth])
else
	AM_CONDITIONAL([FEDORA17], true)
	AM_CONDITIONAL([RHEL6], false)
	AC_SUBST(DRACUT_MODULE_NAME, [crypt])
fi

AC_CONFIG_FILES([Makefile \
		 swtpm-utils/Makefile \
		 swtpm-utils/lib/Makefile \
		 dracut/Makefile \
		 dracut/tpm-luks.conf \
		 tpm-luks/tpm-luks-parse-config \
		 tpm-luks.spec])

AC_OUTPUT
