plymouthdir = /usr/share/dracut/modules.d/50plymouth-tpm
dist_plymouth_SCRIPTS=check \
		      install \
		      plymouth-newroot.sh \
		      cryptroot-ask.sh \
		      installkernel \
		      plymouth-populate-initrd \
		      cryptroot-ask-tpm.sh \
		      plymouth-emergency.sh \
		      plymouth-pretrigger.sh
